shrink issue title on issue page on mobile

--- a/resources/assets/css/components/issue.less
+++ b/resources/assets/css/components/issue.less
@@ -1,6 +1,9 @@
 .issue {
   .issue-title {
     .h4();
+    .mq_640({
+      .h5();
+    });
   }
   .issue-vote {
     width: @tile;
